--- a/styles/_img-grid.scss
+++ b/styles/_img-grid.scss
@@ -6,13 +6,15 @@
     height: 1960px;
     gap: 20px;
 
+    &__img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
 }
 
-.gallery__img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+
 
 .first {
     grid-area: 1/1/8/4;
