--- a/styles/main.css
+++ b/styles/main.css
@@ -1,19 +1,65 @@
-h2 {
+.navbar {
+  width: 100%;
+  max-width: 1110px;
+  display: grid;
+  grid-template-columns: 4fr 1fr;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.name {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 23px;
+  letter-spacing: -0.346154px;
+}
+
+ul {
+  width: 170px;
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+}
+
+.nav__link {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+  letter-spacing: -0.346154px;
+}
+
+.footer {
+  width: 100%;
+  max-width: 1110px;
+  display: grid;
+  grid-template-columns: 4fr 2fr 1fr;
+  align-items: center;
+}
+
+body {
+  color: #111111;
   font-family: "Mulish", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h2 {
   font-style: normal;
   font-weight: 700;
   font-size: 40px;
   line-height: 60px;
-  color: #111111;
 }
 
 .txt {
-  font-family: "Mulish", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 26px;
-  color: #111111;
   mix-blend-mode: normal;
   opacity: 0.8;
 }
