--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,7 +9,9 @@ body {
     font-family: fonts.$font-family;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
+
 }
 
 h2 {
@@ -28,6 +30,6 @@ h2 {
     opacity: 0.8;
 }
 
-span {
+.highlight {
     color: fonts.$highlighted-color;
 }
