--- a/styles/_intro.scss
+++ b/styles/_intro.scss
@@ -4,7 +4,7 @@
     height: 251px;
     display: flex;
     justify-content: space-between;
-    padding: 20px;
+    padding-bottom: 80px;
 
     &__title {
         width: 680px;
