--- a/styles/_service.scss
+++ b/styles/_service.scss
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: space-between;
     padding-top: 80px;
+    padding-bottom: 80px;
 
     &__txt {
         height: 106px;
