--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@
   max-width: 1110px;
   display: grid;
   grid-template-columns: 4fr 1fr;
+  grid-row: 1fr;
   justify-content: space-between;
   align-items: center;
 }
@@ -14,6 +15,10 @@
   font-size: 24px;
   line-height: 23px;
   letter-spacing: -0.346154px;
+}
+
+.navbar__name {
+  grid-area: 1/1/2/2;
 }
 
 ul {
@@ -38,6 +43,7 @@ ul {
   display: grid;
   grid-template-columns: 4fr 2fr 1fr;
   align-items: center;
+  padding-top: 80px;
 }
 
 body {
