--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,2 +1,68 @@
+.project {
+  width: 100%;
+  max-width: 1110px;
+  display: grid;
+  grid-template-columns: 40% 15% 15% 30%;
+  grid-template-rows: 1fr 2fr;
+  padding-top: 60px;
+}
+.project__title {
+  grid-area: 1/1/2/2;
+}
+.project__info {
+  grid-area: 1/4/3/5;
+}
+.project__txt-intro {
+  grid-area: 2/1/3/3;
+}
 
+table {
+  width: 100%;
+  height: 80%;
+}
+
+.tbl__1st-clmn {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+  mix-blend-mode: normal;
+  opacity: 0.5;
+}
+
+.tbl__2nd-clmn {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+}
+
+td {
+  border-bottom: 1px solid #999;
+}
+
+.project-img-big {
+  width: 1110px;
+  height: 660px;
+  object-fit: cover;
+}
+
+.project__txt {
+  width: 100%;
+  max-width: 1110px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.project__img-small {
+  width: 1110px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.project__img {
+  width: 350px;
+  height: 400px;
+  object-fit: cover;
+}
 /*# sourceMappingURL=projects.css.map */
