--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,2 +1,44 @@
+.contact__info {
+  height: 400px;
+  display: flex;
+  justify-content: space-between;
+}
 
+.contact__txt {
+  width: 430px;
+}
+
+.contact__form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+button {
+  width: 125px;
+  height: 50px;
+  background-color: #4A4FF2;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  color: #FFFFFF;
+  border: none;
+}
+
+input {
+  width: 475px;
+  height: 37px;
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #111111;
+  mix-blend-mode: normal;
+  opacity: 0.6;
+  border: none;
+  border-bottom: 1px solid #bbb;
+}
 /*# sourceMappingURL=contact.css.map */
