--- a/styles/_img-grid.scss
+++ b/styles/_img-grid.scss
@@ -2,8 +2,9 @@
     display: grid;
     grid-template-rows: repeat(32 1fr);
     grid-template-columns: repeat(9 1fr);
-    width: 1110px;
-    height: 1960px;
+    width: 100%;
+    max-width: 1110px;
+    min-height: 1960px;
     gap: 20px;
 
     &__img {
