--- a/styles/_main-contact.scss
+++ b/styles/_main-contact.scss
@@ -1,9 +1,13 @@
-.contact__info {
-    height: 400px;
-    display: flex;
-    justify-content: space-between;
-}
+ .contact {
 
-.contact__txt {
-    width: 430px;
-}
+     &__info {
+         height: 400px;
+         display: flex;
+         justify-content: space-between;
+     }
+
+     &__txt {
+         max-width: 430px;
+         width: 100%;
+     }
+ }
