--- a/styles/_form.scss
+++ b/styles/_form.scss
@@ -1,23 +1,31 @@
 @use 'fonts';
 
 
-.contact__form {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
+.contact {
 
-button {
-    width: 125px;
-    height: 50px;
-    background-color: fonts.$highlighted-color;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 20px;
-    text-align: center;
-    color: #FFFFFF;
-    border: none;
+    &__form {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    &__btn {
+        width: 125px;
+        height: 50px;
+        background-color: fonts.$highlighted-color;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 20px;
+        text-align: center;
+        color: #FFFFFF;
+        border: none;
+    }
+
+    &__btn:hover {
+        background-color: fonts.$btn-hover-color;
+    }
+
 }
 
 input {
