--- a/styles/_intro.scss
+++ b/styles/_intro.scss
@@ -1,13 +1,14 @@
 .intro {
-    width: 100%;
     max-width: 1000px;
-    height: 251px;
+    width: 100%;
+    min-height: 251px;
     display: flex;
     justify-content: space-between;
     padding-bottom: 80px;
 
     &__title {
-        width: 680px;
+        max-width: 680px;
+        width: 100%;
     }
 
     &__side {
