--- a/styles/_service.scss
+++ b/styles/_service.scss
@@ -1,14 +1,15 @@
 .service {
-    width: 100%;
     max-width: 1110px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     padding-top: 80px;
     padding-bottom: 80px;
 
     &__txt {
-        height: 106px;
-        width: 635px;
+        max-width: 635px;
+        width: 100%;
+        min-height: 106px;
         font-style: normal;
         font-weight: 700;
         font-size: 28px;
@@ -16,8 +17,9 @@
     }
 
     &__list {
+        max-width: 380px;
+        width: 100%;
         height: 106px;
-        width: 380px;
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
