--- a/styles/contact.css
+++ b/styles/contact.css
@@ -3,9 +3,9 @@
   display: flex;
   justify-content: space-between;
 }
-
 .contact__txt {
-  width: 430px;
+  max-width: 430px;
+  width: 100%;
 }
 
 .contact__form {
@@ -13,8 +13,7 @@
   flex-direction: column;
   justify-content: space-around;
 }
-
-button {
+.contact__btn {
   width: 125px;
   height: 50px;
   background-color: #4A4FF2;
@@ -25,6 +24,9 @@ button {
   text-align: center;
   color: #FFFFFF;
   border: none;
+}
+.contact__btn:hover {
+  background-color: #ffb22d;
 }
 
 input {
