--- a/styles/index.css
+++ b/styles/index.css
@@ -1,13 +1,14 @@
 .intro {
-  width: 100%;
   max-width: 1000px;
-  height: 251px;
+  width: 100%;
+  min-height: 251px;
   display: flex;
   justify-content: space-between;
   padding-bottom: 80px;
 }
 .intro__title {
-  width: 680px;
+  max-width: 680px;
+  width: 100%;
 }
 .intro__side {
   align-self: flex-end;
@@ -28,8 +29,9 @@
   display: grid;
   grid-template-rows: repeat(32 1fr);
   grid-template-columns: repeat(9 1fr);
-  width: 1110px;
-  height: 1960px;
+  width: 100%;
+  max-width: 1110px;
+  min-height: 1960px;
   gap: 20px;
 }
 .gallery__img {
@@ -87,24 +89,26 @@
 }
 
 .service {
-  width: 100%;
   max-width: 1110px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   padding-top: 80px;
   padding-bottom: 80px;
 }
 .service__txt {
-  height: 106px;
-  width: 635px;
+  max-width: 635px;
+  width: 100%;
+  min-height: 106px;
   font-style: normal;
   font-weight: 700;
   font-size: 28px;
   line-height: 38px;
 }
 .service__list {
+  max-width: 380px;
+  width: 100%;
   height: 106px;
-  width: 380px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
