--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 .navbar {
-  width: 100%;
   max-width: 1110px;
+  width: 100%;
   display: grid;
   grid-template-columns: 4fr 1fr;
   grid-row: 1fr;
@@ -38,12 +38,20 @@ ul {
 }
 
 .footer {
-  width: 100%;
   max-width: 1110px;
+  width: 100%;
   display: grid;
   grid-template-columns: 4fr 2fr 1fr;
   align-items: center;
   padding-top: 80px;
+}
+
+i {
+  color: #000;
+}
+
+i:hover {
+  color: #ffb22d;
 }
 
 body {
