--- a/styles/projects.css
+++ b/styles/projects.css
@@ -42,27 +42,31 @@ td {
 }
 
 .project-img-big {
-  width: 1110px;
+  max-width: 1110px;
+  width: 100%;
   height: 660px;
   object-fit: cover;
 }
 
 .project__txt {
-  width: 100%;
   max-width: 1110px;
+  width: 100%;
   padding-top: 40px;
   padding-bottom: 40px;
 }
 
 .project__img-small {
-  width: 1110px;
+  max-width: 1110px;
+  width: 100%;
+  height: 400px;
   display: flex;
   justify-content: space-between;
 }
 
 .project__img {
-  width: 350px;
-  height: 400px;
-  object-fit: cover;
+  max-width: 350px;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 /*# sourceMappingURL=projects.css.map */
